# indic_voice_and_chat

./: .env.example  .gitignore  Dockerfile  PRD.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_api_db_restructure.py  0003_provider_cost_model.py
config/: default.yaml  provider_costs.yaml
config/campaigns/: bharat_matka.yaml  sample_campaign.yaml
config/tenants/: dev.yaml  example.yaml
docs/: PROJECT-STATUS.md  README.md  SESSION-HANDOFF-barge-in.md  infobip-trial-setup.md  latency-llm-stt-experiments.md  live-testing.md  multi-tenant-plan.md  sip-didlogic-integration-plan.md  stringee-streaming.md  stringee-support-writeup.md  telnyx-trial-setup.md
docs/deploy/: northflank.md
scripts/: check_providers.py  export_results.py  place_test_call.py  run_benchmark.py  stringee_smoke_call.py  twilio_smoke_call.py
spikes/: gemini_live_spike.py
src/: __init__.py  bootstrap.py  config.py  config_tenant.py  main.py
src/agents/: __init__.py  base.py  chatbot.py  state_machine.py  voicebot.py
src/analysis/: call_outcome.py
src/api/: __init__.py  benchmarks.py  browser_bridge.py  call_store.py  calls.py  campaigns.py  catalog.py  chat.py  config_routes.py  conversations.py  deps.py  dev_call_control.py  dev_console.py  gemini_live_bridge.py  knowledge.py  live_bridge_base.py  outcome_recorder.py  sessions.py  sip_media_bridge.py  telephony_exotel.py  telephony_hooks.py  telephony_live_bridge.py  telephony_stringee.py  telephony_stringee_bridge.py  telephony_twilio.py  tenants.py  webhooks_routes.py
src/auth/: __init__.py  context.py  db_resolver.py  middleware.py  registry.py  secrets.py  seed.py
src/benchmarks/: __init__.py  datasets.py  export.py  latency_benchmark.py  metrics.py  rag_benchmark.py  runner.py  stats.py  stt_benchmark.py  (+2 more)
static/: admin_console.html  api_console.html  backoffice.html  dev_console.html
tests/: conftest.py
(+181 files in other folders)
